--- a/data/nr_er_tox21/meta.yaml
+++ b/data/nr_er_tox21/meta.yaml
@@ -1,52 +1,51 @@
----
 name: nr_er_tox21
 description: |-
-    Tox21 is a data challenge which contains qualitative toxicity measurements
-    for 7,831 compounds on 12 different targets, such as nuclear receptors and stress
-    response pathways.
+  Tox21 is a data challenge which contains qualitative toxicity measurements
+  for 7,831 compounds on 12 different targets, such as nuclear receptors and stress
+  response pathways.
 targets:
-    - id: toxicity_NR-ER
-      description: whether it shows activity in the NR-ER toxicity assay (1) or not (0)
-      units:
-      type: boolean
-      names:
-          - noun: NR-ER toxicity
-          - noun: NR-Estrogen receptor alpha toxicity
-          - noun: estrogen receptor alpha toxicity
-          - verb: activity in the NR-ER toxicity assay
-          - verb: activity in the NR-Estrogen receptor alpha toxicity assay
-          - verb: activity in the estrogen receptor alpha toxicity assay
-          - adjective: toxic in the NR-ER assay
-          - adjective: toxic in the NR-Estrogen receptor alpha assay
-          - adjective: toxic in the estrogen receptor alpha assay
-uris:
+- id: toxicity_NR-ER
+  description: whether it shows activity in the NR-ER toxicity assay (1) or not (0)
+  units: null
+  type: boolean
+  names:
+  - noun: NR-ER toxicity
+  - noun: NR-Estrogen receptor alpha toxicity
+  - noun: estrogen receptor alpha toxicity
+  - verb: is active in the NR-ER toxicity assay
+  - verb: is active in the NR-Estrogen receptor alpha toxicity assay
+  - verb: is active in the estrogen receptor alpha toxicity assay
+  - adjective: toxic in the NR-ER assay
+  - adjective: toxic in the NR-Estrogen receptor alpha assay
+  - adjective: toxic in the estrogen receptor alpha assay
+uris: null
 benchmarks:
-    - name: TDC
-      link: https://tdcommons.ai/
-      split_column: split
+- name: TDC
+  link: https://tdcommons.ai/
+  split_column: split
 identifiers:
-    - id: SMILES
-      type: SMILES
-      description: SMILES
+- id: SMILES
+  type: SMILES
+  description: SMILES
 license: CC BY 4.0
 links:
-    - url: http://dx.doi.org/10.3389/fenvs.2017.00003
-      description: corresponding publication
-    - url: https://tdcommons.ai/single_pred_tasks/tox/#tox21
-      description: data source
-    - url: https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-018-2523-5/tables/3
-      description: assay name
+- url: http://dx.doi.org/10.3389/fenvs.2017.00003
+  description: corresponding publication
+- url: https://tdcommons.ai/single_pred_tasks/tox/#tox21
+  description: data source
+- url: https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-018-2523-5/tables/3
+  description: assay name
 num_points: 6193
 bibtex:
-    - |-
-      @article{Huang2017,
-      doi = {10.3389/fenvs.2017.00003},
-      url = {https://doi.org/10.3389/fenvs.2017.00003},
-      year = {2017},
-      month = jan,
-      publisher = {Frontiers Media SA},
-      volume = {5},
-      author = {Ruili Huang and Menghang Xia},
-      title = {Editorial: Tox21 Challenge to Build Predictive Models of Nuclear Receptor
-      and Stress Response Pathways As Mediated by Exposure to Environmental Toxicants and Drugs},
-      journal = {Frontiers in Environmental Science}
+- |-
+  @article{Huang2017,
+  doi = {10.3389/fenvs.2017.00003},
+  url = {https://doi.org/10.3389/fenvs.2017.00003},
+  year = {2017},
+  month = jan,
+  publisher = {Frontiers Media SA},
+  volume = {5},
+  author = {Ruili Huang and Menghang Xia},
+  title = {Editorial: Tox21 Challenge to Build Predictive Models of Nuclear Receptor
+  and Stress Response Pathways As Mediated by Exposure to Environmental Toxicants and Drugs},
+  journal = {Frontiers in Environmental Science}
