fix data schmea issues

--- a/data/nr_aromatase_tox21/meta.yaml
+++ b/data/nr_aromatase_tox21/meta.yaml
@@ -13,9 +13,9 @@ targets:
           - noun: NR-Aromatase enzyme toxicity
           - noun: Aromatase enzyme toxicity
           - verb: is active in the NR-Aromatase enzyme toxicity assay
-          - activity: toxic in the NR-Aromatase enzyme assay
-          - activity: toxic in the Aromatase enzyme assay
-uris:
+          - adjective: toxic in the NR-Aromatase enzyme assay
+          - adjective: toxic in the Aromatase enzyme assay
+      uris:
 benchmarks:
     - name: TDC
       link: https://tdcommons.ai/
