feat: update new names setup for p_glycoprotein_inhibition_broccatelli_et_al

--- a/data/p_glycoprotein_inhibition_broccatelli_et_al/meta.yaml
+++ b/data/p_glycoprotein_inhibition_broccatelli_et_al/meta.yaml
@@ -11,8 +11,9 @@ targets:
       units:
       type: boolean
       names:
-          - P-glycoprotein inhibition
-          - Pgp inhibition
+          - noun: P-glycoprotein inhibition
+          - noun: Pgp inhibition
+          - verb: shows Pgp inhibition
       uris:
           - http://purl.bioontology.org/ontology/CSP/4000-0278
 benchmarks:
