--- a/data/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/blood_brain_barrier_martins_et_al/meta.yaml
@@ -12,10 +12,10 @@ targets:
       units:
       type: boolean
       names:
-          - blood brain barrier penetration
-          - ADME blood-brain barrier penetration
-          - ability of a drug to penetrate blood brain barrier to reach the brain
-          - ability of a drug to penetrate blood brain barrier
+          - noun: blood brain barrier penetration
+          - noun: ADME blood-brain barrier penetration
+          - verb: penetrates the blood brain barrier to reach the brain
+          - verb: penetrates the blood brain barrier
       uris:
 benchmarks:
     - name: TDC
