feat: update new names setup for volume_of_distribution_at_steady_state_lombardo_et_al

--- a/data/volume_of_distribution_at_steady_state_lombardo_et_al/meta.yaml
+++ b/data/volume_of_distribution_at_steady_state_lombardo_et_al/meta.yaml
@@ -11,8 +11,8 @@ targets:
       units: VDss(L/kg)
       type: continuous
       names:
-          - volume of distribution at steady state (VDss)
-          - VDss
+          - noun: volume of distribution at steady state (VDss)
+          - noun: VDss
       uris:
           - http://ncicb.nci.nih.gov/xml/owl/EVS/Thesaurus.owl#C85538
 benchmarks:
