feat: update new names setup for half_life_obach

--- a/data/half_life_obach/meta.yaml
+++ b/data/half_life_obach/meta.yaml
@@ -10,9 +10,9 @@ targets:
       units: hours
       type: continuous
       names:
-          - drug half life time
-          - the duration by which the concentration of the drug in the body is reduced by half
-          - half life
+          - noun: half life
+          - noun: drug half life time
+          - noun: the duration by which the concentration of the drug in the body is reduced by half
       uris:
           - http://purl.bioontology.org/ontology/MESH/D006207
 benchmarks:
