--- a/data/cyp2c9_substrate_carbonmangels/meta.yaml
+++ b/data/cyp2c9_substrate_carbonmangels/meta.yaml
@@ -11,10 +11,10 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 2C9 substrate
-          - CYP2C9 substrate
-          - substrate for CYP2C9
-          - substrate for CYP P450 2C9
+          - noun: CYP P450 2C9 substrate
+          - noun: CYP2C9 substrate
+          - adjective: substrate for CYP2C9
+          - adjective: substrate for CYP P450 2C9
       uris:
 benchmarks:
     - name: TDC
