feat: update new names setup for cyp2d6_substrate_carbonmangels

--- a/data/cyp2d6_substrate_carbonmangels/meta.yaml
+++ b/data/cyp2d6_substrate_carbonmangels/meta.yaml
@@ -11,10 +11,11 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 2D6 substrate
-          - CYP2D6 substrate
-          - substrate for CYP2D6
-          - substrate for CYP P450 2D6
+          - noun: CYP P450 2D6 substrate
+          - noun: CYP2D6 substrate
+          - noun: substrate for CYP2D6
+          - noun: substrate for CYP P450 2D6
+          - verb: metabolized by the CYP P450 2D6
       uris:
 benchmarks:
     - name: TDC
