feat: update new names setup for cyp2c9_substrate_carbonmangels

--- a/data/cyp2c9_substrate_carbonmangels/meta.yaml
+++ b/data/cyp2c9_substrate_carbonmangels/meta.yaml
@@ -15,6 +15,7 @@ targets:
           - noun: CYP2C9 substrate
           - noun: substrate for CYP2C9
           - noun: substrate for CYP P450 2C9
+          - verb: is metabolized by CYP P450 2C9
       uris:
 benchmarks:
     - name: TDC
