feat: update new names setup for cyp_p450_1a2_inhibition_veith_et_al

--- a/data/cyp_p450_1a2_inhibition_veith_et_al/meta.yaml
+++ b/data/cyp_p450_1a2_inhibition_veith_et_al/meta.yaml
@@ -13,8 +13,10 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 1A2 inhibition
-          - CYP 1A2 inhibition
+          - noun: CYP P450 1A2 inhibition
+          - noun: CYP 1A2 inhibition
+          - adjective: inhibits CYP P450 1A2
+          - gerund: inhibiting CYP P450 1A2
       uris:
 benchmarks:
     - name: TDC
