feat: update new names setup for cyp_p450_2c19_inhibition_veith_et_al

--- a/data/cyp_p450_2c19_inhibition_veith_et_al/meta.yaml
+++ b/data/cyp_p450_2c19_inhibition_veith_et_al/meta.yaml
@@ -13,8 +13,10 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 2C19 inhibition
-          - CYP 2C19 inhibition
+          - noun: CYP P450 2C19 inhibition
+          - noun: CYP 2C19 inhibition
+          - verb: inhibits CYP 2C19
+          - gerund: inhibiting CYP 2C19
       uris:
 benchmarks:
     - name: TDC
