--- a/data/cyp_p450_2c9_inhibition_veith_et_al/meta.yaml
+++ b/data/cyp_p450_2c9_inhibition_veith_et_al/meta.yaml
@@ -10,8 +10,10 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 2C9 inhibition
-          - CYP 2C9 inhibition
+          - noun: CYP P450 2C9 inhibition
+          - noun: CYP 2C9 inhibition
+          - verb: inhibits CYP P450 2C9
+          - gerund: inhibiting CYP P450 2C9
       uris:
 benchmarks:
     - name: TDC
