feat: update new names setup for cyp_p450_2d6_inhibition_veith_et_al

--- a/data/cyp_p450_2d6_inhibition_veith_et_al/meta.yaml
+++ b/data/cyp_p450_2d6_inhibition_veith_et_al/meta.yaml
@@ -11,8 +11,10 @@ targets:
       units:
       type: boolean
       names:
-          - CYP P450 2D6 inhibition
-          - CYP 2D6 inhibition
+          - noun: CYP P450 2D6 inhibition
+          - noun: CYP 2D6 inhibition
+          - verb: inhibits CYP P450 2D6
+          - gerund: inhibiting CYP P450 2D6
       uris:
 benchmarks:
     - name: TDC
