feat: update new names setup for herg_karim_et_al with is

--- a/data/herg_karim_et_al/meta.yaml
+++ b/data/herg_karim_et_al/meta.yaml
@@ -14,8 +14,8 @@ targets:
           - noun: human ether-à-go-go related gene (hERG) blocker
           - verb: blocks hERG
           - verb: blocks human ether-à-go-go related gene (hERG)
-          - verb: active against hERG (<10uM)
-          - verb: active against human ether-à-go-go related gene (hERG)
+          - verb: is active against hERG (<10uM)
+          - verb: is active against human ether-à-go-go related gene (hERG)
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
 benchmarks:
