trigger 3B model experiment with fastest config

--- a/experiments/configs/hugging-face/3B_fine_tune.yml
+++ b/experiments/configs/hugging-face/3B_fine_tune.yml
@@ -25,14 +25,14 @@ trainer:
   dataloader_num_workers: 4
   bf16: true
   fp16: false
-  per_device_train_batch_size: 1
+  per_device_train_batch_size: 8
   per_device_eval_batch_size: 1
   gradient_checkpointing: True
-  deepspeed_config: deepspeed_offload_S3.json
+  deepspeed_config: deepspeed_S2.json
 
 # Logging configuration (WandB init arguments)
 wandb:
   enabled: true
   project: LLCheM
-  group: test
-  name: test_3B_fine_tune
+  group: 3B_deepspeed
+  name: 3B_fine_tune
