feat: add sample flag to clearance_astrazeneca

--- a/data/clearance_astrazeneca/meta.yaml
+++ b/data/clearance_astrazeneca/meta.yaml
@@ -30,6 +30,7 @@ identifiers:
           - ChEMBL id
           - ChEMBL identifier number
       description: ChEMBL ids
+      sample: false
 license: CC BY 4.0
 links:
     - url: http://dx.doi.org/10.6019/CHEMBL3301361
