--- a/data/nlmchem/meta.yaml
+++ b/data/nlmchem/meta.yaml
@@ -1,17 +1,18 @@
 ---
 name: NLM-Chem
 description: NLM-Chem is a new resource for chemical entity recognition in PubMed full text literature.
+identifier:
+    - id: Abbreviation
+      description: Abbreviation of a term
+      type: categorical
+      names:
+          - Abbreviation
 targets:
     - id: MeSH_Identifier
       description: Unique codes for Medical Subject Headings
       type: categorical
       names:
           - MeSH_Identifier
-    - id: Abbreviation
-      description: Abbreviation of a term
-      type: categorical
-      names:
-          - Abbreviation
     - id: Full_Form
       description: Full form or meaning of the abbreviation
       type: categorical
