feat: minor text changes

--- a/data/offsides/meta.yaml
+++ b/data/offsides/meta.yaml
@@ -2,7 +2,7 @@
 name: offsides
 description: |-
     OffSIDES is a database of individual drug side effect
-    signals mined from the FDA's. Adverse Event Reporting System. The
+    signals mined from the FDA's Adverse Event Reporting System. The
     innovation of OffSIDES is that a propensity score matching (PSM) model
     is used to identify control drugs and produce better PRR estimates. In
     OffSIDES we focus on drug safety signals that are not already
@@ -10,18 +10,18 @@ description: |-
     they are off-label drug side effects.
 targets:
     - id: PRR
-      description: Proportional reporting ratio
+      description: proportional reporting ratio
       type: continuous
       names:
-          - Proportional reporting ratio
+          - proportional reporting ratio
     - id: PRR_error
-      description: Standard error of the PRR estimate
+      description: standard error of the PRR estimate
       type: continuous
       sample: false
       names:
-          - Proportional reporting ratio error
+          - standard error of the proportional reporting ratio error
     - id: mean_reporting_frequency
-      description: Proportion of reports for the drug that report the side effect
+      description: mean reporting frequency for the drug
       type: continuous
       names:
           - mean reporting frequency
