feat: change to text type and minor text changes

--- a/data/nlmchem/meta.yaml
+++ b/data/nlmchem/meta.yaml
@@ -3,21 +3,22 @@ name: NLM-Chem
 description: NLM-Chem is a new resource for chemical entity recognition in PubMed full text literature.
 identifier:
     - id: Abbreviation
-      description: Abbreviation of a term
+      description: abbreviation of a term
       type: categorical
       names:
-          - Abbreviation
+          - abbreviation
 targets:
     - id: MeSH_Identifier
-      description: Unique codes for Medical Subject Headings
+      description: unique codes for Medical Subject Headings
       type: categorical
       names:
-          - MeSH_Identifier
+          - MeSH identifier
+      sample: false
     - id: Full_Form
-      description: Full form or meaning of the abbreviation
+      description: full form or meaning of the abbreviation
       type: categorical
       names:
-          - Full_Form
+          - full form or meaning of the abbreviation
 license: CC BY 4.0
 links:
     - url: https://ftp.ncbi.nlm.nih.gov/pub/lu/NLMChem/
