--- a/data/buchwald_hartwig/meta.yaml
+++ b/data/buchwald_hartwig/meta.yaml
@@ -1,6 +1,6 @@
 name: buchwald_hartwig_doyle
 description: High-throughput experimentation palladium-catalyzed Buchwald Hardwig
-  data set with yields.
+  C-N cross-coupling data set with yields.
 targets:
 - id: yield
   description: Reaction yields analyzed by UPLC
@@ -11,30 +11,41 @@ targets:
   - yield
 identifiers:
 - id: reaction_SMILES
+  type: RXN-SMILES
+  description: RXN-SMILES
+- id: ligand
   type: SMILES
-  description: SMILES
-license: MIT license
+  description: ligand SMILES
+- id: additive
+  type: SMILES
+  description: additive SMILES
+- id: base
+  type: SMILES
+  description: base SMILES
+- id: aryl_halide
+  type: SMILES
+  description: aryl halide SMILES
+license: MIT
 links:
 - url: https://doi.org/10.1126/science.aar5169
   description: corresponding publication
 - url: https://www.sciencedirect.com/science/article/pii/S2451929420300851
-  description: publication with data in compressed format
+  description: publication with data processing
 - url: https://github.com/rxn4chemistry/rxn_yields/blob/master/rxn_yields/data.py
   description: preprocessing
 - url: https://github.com/reymond-group/drfp/tree/main/data
   description: dataset
 num_points: 3955
-url: https://tdcommons.ai/single_pred_tasks/tox/#acute-toxicity-ld50
+url: https://doi.org/10.1126/science.aar5169
 bibtex:
 - |-
   @article{ahneman2018predicting,
-      title={Predicting reaction performance in C--N cross-coupling using machine learning},
-      author={Ahneman, Derek T and Estrada, Jes{'u}s G and Lin, Shishi and Dreher, Spencer D and Doyle, Abigail G},
-      journal={Science},
-      volume={360},
-      number={6385},
-      pages={186--190},
-      year={2018},
-      publisher={American Association for the Advancement of Science}
-      }
-      }
+  title={Predicting reaction performance in C--N cross-coupling using machine learning},
+  author={Ahneman, Derek T and Estrada, Jes{'u}s G and Lin, Shishi and Dreher, Spencer D and Doyle, Abigail G},
+  journal={Science},
+  volume={360},
+  number={6385},
+  pages={186--190},
+  year={2018},
+  publisher={American Association for the Advancement of Science},
+  }
