feat: switch back to string instead of text for chebi_20

--- a/data/chebi_20/meta.yaml
+++ b/data/chebi_20/meta.yaml
@@ -5,7 +5,7 @@ targets:
     - id: description
       description: a natural language description of the molecule SMILE
       units:
-      type: text
+      type: string
       names:
           - natural language description
       pubchem_aids: []
