feat: rhea_id sample false

--- a/data/rhea_db/meta.yaml
+++ b/data/rhea_db/meta.yaml
@@ -17,6 +17,7 @@ identifiers:
     - id: rhea_id
       type: int
       description: Rhea reaction ID
+      sample: false
     - id: equation
       type: string
       description: reaction equation
