--- a/experiments/configs/data_configs/data_mixing.yml
+++ b/experiments/configs/data_configs/data_mixing.yml
@@ -1,4 +1,4 @@
 data_paths: ["/fsx/proj-chemnlp/data/EleutherAI/pythia-1b/hendrycks_STEM", "/fsx/proj-chemnlp/data/EleutherAI/pythia-1b/marianna13/chemrxiv"]
-data_proportions: [0.8, 0.2]
-save_path: "/fsx/proj-chemnlp/data/EleutherAI/pythia-1b/80hendrycks_20chemrxiv"
-stopping_strategy: "first_exhausted"
+num_tokens: [2826240, 28262400]
+context_length: 2048
+save_path: "/fsx/proj-chemnlp/data/EleutherAI/pythia-1b/2826240hendrycks_28262400chemrxiv"
