do not sample compound id

--- a/data/chebi_20/meta.yaml
+++ b/data/chebi_20/meta.yaml
@@ -16,6 +16,7 @@ identifiers:
       description: SMILES
     - id: compound_id
       type: Other
+      sample: false
       description: This is the PubChem CID to identify a given molecule.
 license: CC BY 4.0
 links:
