--- a/data/ames_mutagenicity/meta.yaml
+++ b/data/ames_mutagenicity/meta.yaml
@@ -21,6 +21,8 @@ targets:
           - verb: has the ability to induce genetic alterations
           - gerund: having the potential to cause mutations
           - gerund: having the potential to induce genetic alterations
+      uris: []
+      pubchem_aids: []
 benchmarks:
     - name: TDC
       link: https://tdcommons.ai/
@@ -51,3 +53,10 @@ bibtex:
       Zheng Du and Weihua Li and Guixia Liu and Philip W. Lee and Yun Tang},
       title = {In silico Prediction of Chemical Ames Mutagenicity},
       journal = {Journal of Chemical Information and Modeling}
+templates:
+    - The molecule with the {SMILES__description} representation of {SMILES#} exhibits {mutagenic#no &NULL}{mutagenic__names__adjective} properties.
+    - Based on the {SMILES__description} representation {SMILES#}, the molecule has {mutagenic#no &NULL}{mutagenic__names__adjective} characteristics.
+    - The {SMILES__description} {SMILES#} represents a molecule that is {mutagenic#not &NULL}identified as {mutagenic__names__adjective}.
+    - The {SMILES__description} {SMILES#} is {mutagenic#no &NULL}{mutagenic__names__adjective}.
+    - The molecule {SMILES#} is {mutagenic__names__adjective}.
+    - Is the {SMILES__description} {SMILES#} {mutagenic__names__adjective}:<EOI>{mutagenic# yes& no}
