--- a/data/herg_central/meta.yaml
+++ b/data/herg_central/meta.yaml
@@ -1,8 +1,8 @@
 ---
 name: herg_central
-description: "Human ether-à-go-go related gene (hERG) is crucial for the coordination\nof the heart's beating. Thus, if a drug blocks the hERG, it could
-    lead to severe\nadverse effects. Therefore, reliable prediction of hERG liability in the early\nstages of drug design is quite important to reduce the
-    risk of cardiotoxicity-related\nattritions in the later development stages. There are three targets: hERG_at_1microM,\nhERG_at_10microM, and hERG_inhib."
+description: "Human ether-à-go-go related gene (hERG) is crucial for the coordination\nof the heart's beating. Thus, if a drug blocks the hERG, it could\
+    \ lead to severe\nadverse effects. Therefore, reliable prediction of hERG liability in the early\nstages of drug design is quite important to reduce\
+    \ the risk of cardiotoxicity-related\nattritions in the later development stages. There are three targets: hERG_at_1microM,\nhERG_at_10microM, and hERG_inhib."
 targets:
     - id: hERG_at_1uM
       description: the percent inhibition of hERG at a 1uM concentration
@@ -57,7 +57,7 @@ links:
       description: Data source
 num_points: 920679
 bibtex:
-    - "@article{Du2011,\ndoi = {10.1089/adt.2011.0425},\nurl = {https://doi.org/10.1089/adt.2011.0425},\nyear = {2011},\nmonth = dec,\npublisher = {Mary
-      Ann Liebert Inc},\nvolume = {9},\nnumber = {6},\npages = {580--588},\nauthor = {Fang Du and Haibo Yu and Beiyan Zou and Joseph Babcock\nand Shunyou
-      Long and Min Li},\ntitle = {hERGCentral: A Large Database to Store,  Retrieve,  and Analyze Compound Human\nEther-à-go-go Related Gene Channel Interactions
-      to Facilitate Cardiotoxicity Assessment in Drug Development},\njournal = {ASSAY and Drug Development Technologies}"
+    - "@article{Du2011,\ndoi = {10.1089/adt.2011.0425},\nurl = {https://doi.org/10.1089/adt.2011.0425},\nyear = {2011},\nmonth = dec,\npublisher = {Mary\
+      \ Ann Liebert Inc},\nvolume = {9},\nnumber = {6},\npages = {580--588},\nauthor = {Fang Du and Haibo Yu and Beiyan Zou and Joseph Babcock\nand Shunyou\
+      \ Long and Min Li},\ntitle = {hERGCentral: A Large Database to Store,  Retrieve,  and Analyze Compound Human\nEther-à-go-go Related Gene Channel Interactions\
+      \ to Facilitate Cardiotoxicity Assessment in Drug Development},\njournal = {ASSAY and Drug Development Technologies}"
