--- a/data/chebi_20/meta.yaml
+++ b/data/chebi_20/meta.yaml
@@ -17,7 +17,7 @@ identifiers:
     - id: compound_id
       type: Other
       names:
-          - noun: compound id
+          - compound id
       sample: false
       description: This is the PubChem CID to identify a given molecule.
 license: CC BY 4.0
