--- a/data/nlmchem/meta.yaml
+++ b/data/nlmchem/meta.yaml
@@ -1,7 +1,7 @@
 ---
 name: NLM-Chem
 description: NLM-Chem is a new resource for chemical entity recognition in PubMed full text literature.
-identifier:
+identifiers:
     - id: Abbreviation
       description: abbreviation of a term
       type: Other
