chore: Change identifier to `Optional[List[Name]]`
Fixes #316

--- a/data/clearance_astrazeneca/meta.yaml
+++ b/data/clearance_astrazeneca/meta.yaml
@@ -27,8 +27,8 @@ identifiers:
     - id: chembl_id
       type: Other
       names:
-          - ChEMBL id
-          - ChEMBL identifier number
+          - noun: ChEMBL id
+          - noun: ChEMBL identifier number
       description: ChEMBL ids
       sample: false
 license: CC BY 4.0
