--- a/data/herg_blockers/meta.yaml
+++ b/data/herg_blockers/meta.yaml
@@ -31,9 +31,9 @@ identifiers:
       type: Other
       description: compound name
       names:
-          - compound
-          - compound name
-          - drug
+          - noun: compound
+          - noun: compound name
+          - noun: drug
 license: CC BY 4.0
 links:
     - url: https://doi.org/10.1021/acs.molpharmaceut.6b00471
