chore: refactor additional entries

--- a/data/half_life_obach/meta.yaml
+++ b/data/half_life_obach/meta.yaml
@@ -26,8 +26,8 @@ identifiers:
     - id: chembl_id
       type: Other
       names:
-          - ChEMBL database id
-          - ChEMBL identifier number
+          - noun: ChEMBL database id
+          - noun: ChEMBL identifier number
       description: ChEMBL ids
       sample: false
 license: CC BY 4.0
