--- a/data/cyp2c9_substrate_carbonmangels/meta.yaml
+++ b/data/cyp2c9_substrate_carbonmangels/meta.yaml
@@ -28,9 +28,9 @@ identifiers:
     - id: compound_name
       type: Other
       names:
-          - compound name
-          - drug name
-          - generic drug name
+          - noun: compound name
+          - noun: drug name
+          - noun: generic drug name
       description: drug name
 license: CC BY 4.0
 links:
