--- a/data/iupac_goldbook/meta.yaml
+++ b/data/iupac_goldbook/meta.yaml
@@ -30,8 +30,8 @@ identifiers:
       type: Other
       description: chemistry term
       names:
-          - term
-          - chemistry term
+          - noun: term
+          - noun: chemistry term
 license: CC BY-NC-ND 4.0
 links:
     - url: https://goldbook.iupac.org
